--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="header bg-gradient-danger py-7 py-lg-8">
+<div class="header bg-gradient-danger py-6 py-lg-8">
   <div class="container">
-    <div class="header-body text-center mb-7">
+    <div class="header-body text-center">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Welcome!</h1>
@@ -37,13 +37,13 @@
           <div class="text-center text-muted mb-4">
             <small>Or sign in with credentials</small>
           </div>
-          <form role="form">
+          <form #form="ngForm" [formGroup]="loginForm" (ngSubmit)="submit(form)">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email">
+                <input formControlName="email" class="form-control" name="email" placeholder="Email" type="email">
               </div>
             </div>
             <div class="form-group">
@@ -51,7 +51,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input formControlName="password" class="form-control" name="password" placeholder="Password" type="password">
               </div>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
@@ -61,7 +61,7 @@
               </label>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Sign in</button>
+              <button type="submit" class="btn btn-primary my-4">Sign in</button>
             </div>
           </form>
         </div>
