--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -44,6 +44,10 @@
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
                 <input formControlName="email" class="form-control" name="email" placeholder="Email" type="email">
+                <div *ngIf="loginForm.get('email').errors" class="invalid-feedback">
+                  <div *ngIf="loginForm.get('email').errors?.['required']">Email is required.</div>
+                  <div *ngIf="this.loginForm.get('email').errors?.['pattern']">Please enter valid email.</div>
+              </div>
               </div>
             </div>
             <div class="form-group">
